# UString

./: README.md  demo.py  pyproject.toml  requirements.txt
FeatureExtraction/environments/: Dockerfile
FeatureExtraction/environments/gpu/: docker-compose.yaml
Inference/environments/gpu/: docker-compose.yaml
environments/: Dockerfile
environments/gpu/: docker-compose.yaml
