[tool.poetry]
name = "ascender"
version = "0.1.0"
description = "Project template for XCCV group of cvpaper.challenge."
license = "MIT"
authors = ["cvpaper.challenge XCCV group"]
maintainers = ["yoshihiro fukuhara <gatheluck@gmail.com>"]
readme = "README.md"
keywords = [
    "ascender",
    "Python",
    "projects",
    "project templates",
    "project directory",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Japanese",
    "Programming Language :: Python",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = ">3.8"
torch = "^1.12.1"
torchvision = "^0.13.1"
Cython = "^0.29.32"
pycocotools = "^2.0.4"
mmcv = "^1.6.1"
numba = "^0.56.0"
opencv-python = "^4.6.0"
scikit-image = "^0.19.3"
imageio = "^2.21.1"
youtube_dl = "^2021.12.17"
seaborn = "^0.11.2"
scikit-learn = "^1.1.2"
ipdb = "^0.13.9"
PyYAML = "^6.0"
tqdm = "^4.64.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
